--- a/todolist/src/main/resources/application.yaml
+++ b/todolist/src/main/resources/application.yaml
@@ -5,9 +5,9 @@ server:
 
 spring:
   datasource:
-    username: enterUsernameHere
-    password: enterPasswordHere
-    url: enterURLhere
+    username: jamisonm
+    password: Randomdogpark
+    url: jdbc:postgresql://todolist.cwi3jukycyjs.us-east-1.rds.amazonaws.com:5432/postgres
     driver-class-name: org.postgresql.Driver
 
 logging:
